[skin] Fixed receipt footer align with receipt's line desc, qty and price

--- a/web/org.openbravo.retail.posterminal/css/obpos-main.css
+++ b/web/org.openbravo.retail.posterminal/css/obpos-main.css
@@ -3629,7 +3629,7 @@ li.selected > .obUiRenderOrderLine_edit {
 .obUiTotalReceiptLine-lblTotal {
   display: inline-block;
   font-weight: bold;
-  width: calc(100% - 225px);
+  width: calc(100% - 275px);
 }
 
 .obUiTotalReceiptLine-lblTotal_large {
@@ -3659,7 +3659,7 @@ li.selected > .obUiRenderOrderLine_edit {
 
 .obUiTotalReceiptLine-obUiFitTextGross {
   display: inline-block;
-  width: 160px;
+  width: 210px;
   text-align: right;
   font-weight: bold;
 }
